src/main/java/com/example/solid/liskovSubsituation/good/FixedTermDepositAccount.java
package com.example.solid.liskovSubsituation.good;

import java.math.BigDecimal;

public class FixedTermDepositAccount extends Account {

    @Override
    void deposit(BigDecimal amount) {

    }
}
